--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color1: #220c37;
+  --color2: #c8c8c8;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0%;
+  margin: 0%;
+  text-decoration: none;
+}
+
+body {
+  background-color: var(--color2);
+}
+ 
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color1);
+  border-radius: 10px;
+  padding: 1em;
+  margin: 1em;
+  color: white;
+  align-items: center;
+}
+
+header h1 {
+  font-size: 40px;
+}
+
+nav *{
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+nav *:hover {
+  color: #c8c8c8;
+}
+
+.homeSection {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.homeSection div {
+  width: 45%;
+  color: white;
+  border-radius: 5px;
+  height: 100%;
+  margin: 1em;
+  background-color: var(--color1);
+  text-align: center;
 }
