--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,12 @@ nav *:hover {
   color: #c8c8c8;
 }
 
+.loader {
+  margin-top: 15em;
+  display: flex;
+  justify-content: center;
+}
+
 .homeSection {
   margin-top: 3em;
   display: flex;
@@ -205,12 +211,17 @@ nav *:hover {
 }
 
 .listDiv {
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
+  width: 100%;
 }
 
-.listDiv a {
+.listDiv div {
+  margin: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.listDiv div a {
   background-color: var(--color1);
   color: white;
   text-align: center;
@@ -220,7 +231,39 @@ nav *:hover {
   border-radius: 5px;
 }
 
-.listDiv a:hover {
+.listDiv div a:hover {
   background-color: var(--color3);
   scale: 1.01;
+}
+
+.reactTrash {
+  background-color: var(--color1);
+  color: white;
+  padding: 1em;
+  border-radius: 5px;
+  transition: .2s;
+}
+
+.reactTrash:hover {
+  cursor: pointer;
+  background-color: var(--color3);
+  color: var(--color2);
+  scale: 1.1;
+}
+
+.listComponent div {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.listComponent div * {
+  width: 100%;
+}
+
+
+.singleListSection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
