--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,6 +141,16 @@ nav *:hover {
   justify-content: center;
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+label {
+  width: 100%;
+}
+
 .form-div {
   background-color: var(--color1);
   padding: 1em;
@@ -171,12 +181,32 @@ nav *:hover {
 
 .form-firstLast {
   display: flex;
+  width: 100%;
 }
 
 .form-submit {
   padding: 0.2em 2em 0.2em 2em;
   font-weight: bold;
   font-size: 16px;
+}
+
+.pass-input {
+  display: flex;
+  width: 100%;
+  margin: auto;
+  padding: 0.5em;
+}
+
+#passToggle,
+#passToggle2 {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+}
+
+#passToggle:hover,
+#passToggle2:hover {
+  cursor: pointer;
 }
 
 .needLoginSection {
