--- a/client/src/index.css
+++ b/client/src/index.css
@@ -312,14 +312,16 @@ label {
   width: 100%;
 }
 
-.listDiv div {
+.listDivEl {
+  position: relative;
   margin: auto;
   display: flex;
-  flex-wrap: nowrap;
   align-items: center;
+  transition: .2s linear;
+  width: 100%;
 }
 
-.listDiv div a {
+.listDivEl .listComponent, .listDivElToggle .listComponent {
   background-color: var(--color1);
   color: white;
   text-align: center;
@@ -327,11 +329,42 @@ label {
   padding: 1em;
   margin-top: 1em;
   border-radius: 5px;
+  z-index: 100;
 }
 
-.listDiv div a:hover {
+.listDivElToggle {
+  margin: auto;
+  transition: .2s linear;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 60%;
+}
+
+.listDivEl .listComponent:hover, .listDivElToggle .listComponent:hover {
+  cursor: pointer;
   background-color: var(--color3);
   scale: 1.01;
+}
+
+.listDivEl a, .listDivElToggle a {
+  position: fixed;
+  left: 30%;
+  background-color: var(--color1);
+  color: white;
+  padding: 1em;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+.reactTrashList {
+  position: fixed;
+  left: 85%;
+  background-color: var(--color1);
+  color: white;
+  padding: 1em;
+  border-radius: 5px;
+  transition: 0.2s;
 }
 
 .reactTrash {
@@ -342,7 +375,7 @@ label {
   transition: 0.2s;
 }
 
-.reactTrash:hover {
+.reactTrash:hover, .reactTrashList:hover {
   cursor: pointer;
   background-color: var(--color3);
   color: var(--color2);
@@ -489,3 +522,4 @@ label {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
