--- a/client/src/index.css
+++ b/client/src/index.css
@@ -577,17 +577,31 @@ label {
 }
 
 @media (max-width: 700px) {
+  .singleListPage {
+    flex-wrap: wrap;
+  }
+  .singleListPage .myListLeft {
+    width: fit-content;
+    min-width: 50%;
+    margin: auto;
+  }
+  .listHidden {
+    display: none;
+  }
   .listIcon {
-    display: block;
-    background-color: var(--color1);
+    display: flex;
+    justify-content: space-around;
     color: white;
+  }
+  .listIcon span {
+    width: fit-content;
     padding: 1em;
+    background-color: var(--color1); 
     border-radius: 5px;
     transition: 0.2s;
-    text-align: center;
   }
   
-  .listIcon:hover {
+  .listIcon span:hover {
     cursor: pointer;
     background-color: var(--color3);
     color: var(--color2);
@@ -621,4 +635,31 @@ label {
  .listComponent div p {
   font-size: 14px;
  }
+}
+
+/* MODAL BASIC THING_______________________________________________________________________________ */
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.25);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.123s;
+}
+
+.modal-window > div {
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2em;
+  background: var(--quarternary);
+  color: var(--text-light);
 }
