--- a/client/src/index.css
+++ b/client/src/index.css
@@ -463,9 +463,15 @@ label {
 }
 
 .myItem {
-  min-width: 30%;
-  width: fit-content;
-  max-width: 90%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-wrap: break-word;
+}
+
+.myItem .reactTrash {
+  height: fit-content;
 }
 
 .itemLink {
@@ -528,6 +534,11 @@ label {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+.errorText {
+  text-align: center;
+  color: red;
 }
 
 
@@ -595,7 +606,7 @@ label {
   }
   .listIcon span {
     width: fit-content;
-    padding: 1em;
+    padding: .5em;
     background-color: var(--color1); 
     border-radius: 5px;
     transition: 0.2s;
@@ -637,6 +648,19 @@ label {
  }
 }
 
+@media (max-width: 400px) {
+  .itemMapDiv div a {
+    margin: .3em;
+  }
+  .itemDiv h2 {
+    font-size: 14px;
+  }
+  .itemDiv h4 {
+    font-size: 10px;
+    font-weight: 100;
+  }
+}
+
 /* MODAL BASIC THING_______________________________________________________________________________ */
 
 .modal-window {
@@ -654,12 +678,26 @@ label {
 }
 
 .modal-window > div {
-  width: 400px;
-  position: absolute;
+  width: 80%;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 2em;
-  background: var(--quarternary);
-  color: var(--text-light);
+  padding: .5em;
+  border-radius: 5px;
+  background: var(--color1);
+}
+
+.cancelModal {
+  position: fixed;
+  left: -3%;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.cancelModal .insetBtnInverse {
+  padding: .2em;
 }
