--- a/client/src/index.css
+++ b/client/src/index.css
@@ -427,14 +427,15 @@ padding: 1em;
 
 .listDiv {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .listDivEl {
-  position: relative;
-  margin: auto;
   display: flex;
   align-items: center;
-  transition: .2s linear;
+  transition: .15s linear;
   width: 100%;
 }
 
@@ -443,20 +444,24 @@ padding: 1em;
   color: white;
   text-align: center;
   width: 90%;
-  padding: 1em;
   margin: auto;
+  padding: 1em;
   margin-top: 1em;
+  overflow: hidden;
   border-radius: 5px;
-  z-index: 100;
 }
 
+.listDivElToggle .listComponent {
+  width: 70%;
+}
+
+
+
 .listDivElToggle {
-  margin: auto;
-  transition: .2s linear;
-  position: relative;
+  transition: .15s linear;
   display: flex;
   align-items: center;
-  width: 60%;
+  width: 80%;
 }
 
 .listDivEl .listComponent:hover, .listDivElToggle .listComponent:hover {
@@ -466,8 +471,6 @@ padding: 1em;
 }
 
 .listDivEl a, .listDivElToggle a {
-  position: fixed;
-  left: 30%;
   background-color: var(--color1);
   color: white;
   padding: 1em;
@@ -476,11 +479,10 @@ padding: 1em;
 }
 
 .reactTrashList {
-  position: fixed;
-  left: 85%;
   background-color: var(--color1);
   color: white;
   padding: 1em;
+  margin: auto;
   border-radius: 5px;
   transition: 0.2s;
 }
@@ -652,6 +654,9 @@ padding: 1em;
   color: red;
 }
 
+.hidden {
+  display: none;
+}
 
 @media (max-width: 1400px) {
   .singleItemTitleDiv h1 {
@@ -692,18 +697,13 @@ padding: 1em;
   .listsPage .myListLeft, .singleListPage .myListLeft {
     width: 50%;
   }
-  .listDivEl a, .listDivElToggle a {
-    left: 35%;
-  }
-  .reactTrashList {
-    left: 90%;
-  }
   .itemMapDiv div {
     width: 95%;
   }
-}
 
-@media (max-width: 700px) {
+  .listDivElToggle {
+    width: 80%;
+  }
   .singleListPage {
     flex-wrap: wrap;
   }
@@ -743,11 +743,9 @@ padding: 1em;
   margin: auto;
  }
  .reactTrashList {
-  left: 85%;
   padding: .5em;
  }
  .listDivEl a, .listDivElToggle a {
-  left: 4%;
   padding: .5em;
  }
  .listDivEl {
@@ -762,9 +760,16 @@ padding: 1em;
  .listComponent div p {
   font-size: 14px;
  }
+
 }
 
-@media (max-width: 400px) {
+@media (max-width: 800px) {
+  .listDivElToggle a, .reactTrashList {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 460px) {
   .itemMapDiv div a {
     margin: .3em;
   }
@@ -774,6 +779,17 @@ padding: 1em;
   .itemDiv h4 {
     font-size: 10px;
     font-weight: 100;
+  }
+  
+  .listDivElToggle {
+    width: 100%;
+  }
+  .listDivElToggle .listComponent {
+    width: 60%;
+  }
+
+  .listDivElToggle a, .reactTrashList {
+    font-size: 12px;
   }
 }
 
