some major color changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit&display=swap");
 
 :root {
-  --color1: #1a052e;
-  --color2: #bcb8b1;
-  --color3: #39274b;
-  --color4: #353831;
-  --color5: #AD5D4E;
-  --color6: #3E78B2;
+  --color1: #DADED4;
+  --color2: #A3BCB6;
+  --color3: #3C403D;
+  --color4: #4272BF;
+  --color5: #FFFFFF;
+  --color6: #39603D;
 }
 
 * {
@@ -17,12 +17,14 @@
 }
 
 html {
-  height: 1vh;
+  height: 100%;
+  background: rgb(57,96,61);
+background: -moz-linear-gradient(0deg, rgba(57,96,61,0.6755077030812324) 20%, rgba(255,255,255,1) 100%);
+background: -webkit-linear-gradient(0deg, rgba(57,96,61,0.6755077030812324) 20%, rgba(255,255,255,1) 100%);
+background: linear-gradient(0deg, rgba(57,96,61,0.6755077030812324) 20%, rgba(255,255,255,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#39603d",endColorstr="#ffffff",GradientType=1);
 }
 
-body {
-  background: var(--color2);
-}
 
 header {
   display: flex;
@@ -31,7 +33,7 @@ header {
   border-radius: 5px;
   padding: 1em;
   margin: 1em;
-  color: white;
+  color: var(--color3);
   align-items: center;
 }
 
@@ -40,13 +42,16 @@ header h1 {
 }
 
 nav a {
-  color: white;
+  color: var(--color3);
   display: flex;
   justify-content: center;
+  transition: .1s linear;
 }
 
 nav a:hover {
-  color: #c8c8c8;
+  scale: 1.01;
+  cursor: pointer;
+  color: black;
 }
 
 .loader {
@@ -65,21 +70,19 @@ nav a:hover {
 
 .insetBtn {
   border-radius: 5px;
-  border: solid 2px var(--color1);
   padding: 0.25em 0.8em;
   margin: 0.5em;
   transition: 0.3s;
-  background-color: var(--color1);
+  background-color: var(--color4);
 }
 
 .insetBtn:hover {
-  box-shadow: inset 0 0 0 2.5em var(--color3);
+  box-shadow: inset 0 0 0 2.5em var(--color1);
   cursor: pointer;
 }
 
 .insetBtnInverse {
   border-radius: 5px;
-  border: solid 2px var(--color2);
   padding: 0.25em 0.8em;
   margin: 0.5em;
   transition: 0.25s;
@@ -87,23 +90,23 @@ nav a:hover {
 }
 
 .insetBtnInverse:hover {
-  box-shadow: inset 0 0 0 2em var(--color4);
-  color: white;
+  box-shadow: inset 0 0 0 2em var(--color3);
+  color: var(--color5);
   cursor: pointer;
 }
 
 .homeSection a {
   width: 45%;
-  color: white;
+  color: var(--color3);
   border-radius: 5px;
   height: 100%;
   margin: 1em;
-  background-color: var(--color1);
+  background-color: var(--color4);
   text-align: center;
 }
 
 .homeSection div:hover {
-  background-color: var(--color3);
+  background-color: var(--color1);
   cursor: pointer;
 }
 
@@ -111,6 +114,7 @@ nav a:hover {
   padding: 2em;
   font-size: 35px;
 }
+
 
 
 @media (max-width: 750px) {
@@ -155,7 +159,7 @@ nav a:hover {
 }
 
 .sectionTitleDiv {
-  color: white;
+  color: var(--color3);
   border-radius: 5px;
   padding: 2em;
   margin: 1em;
@@ -166,7 +170,7 @@ nav a:hover {
 /* LOGIN ******************************************************************************************************************* */
 
 .loginSection {
-  color: white;
+  color: var(--color3);
   display: flex;
   flex-wrap: wrap;
   text-align: center;
@@ -245,12 +249,12 @@ label {
 }
 
 .needLoginSection {
-  background-color: var(--color1);
+  background-color: var(--color4);
   width: fit-content;
   margin: auto;
   padding: 1em;
   margin-top: 15em;
-  color: white;
+  color: var(--color1);
   border-radius: 5px;
   text-align: center;
 }
@@ -300,7 +304,7 @@ padding: 1em;
 
 .accountDiv {
   background-color: var(--color1);
-  color: white;
+  color: var(--color3);
   padding: 1em;
   border-radius: 5px;
   width: 60%;
@@ -322,7 +326,7 @@ padding: 1em;
 
 .accountForm div {
   width: 80%;
-  color: white;
+  color: var(--color3);
 }
 
 .infoBtnDiv {
@@ -405,7 +409,7 @@ padding: 1em;
 }
 
 .createListComponent {
-  color: white;
+  color: var(--color3);
   border-radius: 5px;
   padding: 2em;
   margin: 1em;
@@ -414,7 +418,7 @@ padding: 1em;
 }
 
 .editItem:hover {
-  background-color: var(--color3);
+  background-color: var(--color4);
 }
 .myListLeft {
   width: 35%;
@@ -439,7 +443,7 @@ padding: 1em;
 
 .listDivEl a {
   background-color: var(--color1);
-  color: white;
+  color: var(--color3);
   text-align: center;
   width: 80%;
   padding: 1em;
@@ -450,13 +454,13 @@ padding: 1em;
 
 .listDivEl a:hover {
   cursor: pointer;
-  background-color: var(--color3);
+  background-color: var(--color4);
   scale: 1.01;
 }
 
 .listDivEl a {
   background-color: var(--color1);
-  color: white;
+  color: var(--color3);
   padding: 1em;
   border-radius: 5px;
   transition: 0.2s;
@@ -464,7 +468,7 @@ padding: 1em;
 
 .reactTrashList {
   background-color: var(--color1);
-  color: white;
+  color: var(--color3);
   padding: 1em;
   margin: auto;
   border-radius: 5px;
@@ -473,7 +477,7 @@ padding: 1em;
 
 .reactTrash {
   background-color: var(--color1);
-  color: white;
+  color: var(--color3);
   padding: 1em;
   border-radius: 5px;
   transition: 0.2s;
@@ -514,10 +518,18 @@ padding: 1em;
 }
 
 .itemMapDiv .itemSortDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  text-align: center;
   width: 90%;
   padding: 1em;
   border-radius: 5px;
-  background-color: var(--color6);
+  background-color: var(--color4);
+}
+
+.itemSortDiv h3 {
+  width: 100%;
 }
 
 .itemMapDiv div a {
@@ -525,11 +537,11 @@ padding: 1em;
   background-color: var(--color1);
   border-radius: 5px;
   margin: 1em;
-  color: white;
+  color: var(--color3);
 }
 
 .itemMapDiv div a:hover {
-  background-color: var(--color3);
+  background-color: var(--color4);
 }
 
 .itemMapDiv div span {
@@ -710,7 +722,7 @@ padding: 1em;
   .listIcon {
     display: flex;
     justify-content: space-around;
-    color: white;
+    color: var(--color3);
   }
   .listIcon span {
     width: fit-content;
