--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
   --color1: #DADED4;
   --color2: #A3BCB6;
   --color3: #3C403D;
-  --color4: #4272BF;
+  --color4: #3a81f5;
   --color5: #FFFFFF;
   --color6: #39603D;
 }
@@ -447,7 +447,7 @@ padding: 1em;
   display: flex;
   justify-content: space-between;
   background-color: var(--color1);
-  margin: 1em .5em;
+  margin: 1.5em .5em;
   padding: .5em 1em .2em 1em ;
   transition: .1s linear;
   border-radius: 5px;
@@ -469,6 +469,13 @@ padding: 1em;
   width: 52%;
   background-color: var(--color4);
 }
+
+.expandedFriendDiv p {
+  width: 100%;
+  text-align: center;
+  padding-top: 1em;
+}
+
 
 .expandedFriendDiv h3 {
   text-align: center;
@@ -501,6 +508,20 @@ padding: 1em;
 .listShown {
   display: none;
 }
+
+.removeFriend {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100%;
+  background-color: var(--color1);
+  border-radius: 5px;
+  margin-top: 4em;
+  font-size: 12px;
+  padding: .3em;
+}
+
 @media (max-width: 1100px) {
   .friendDiv {
     width: 70%;
@@ -518,9 +539,7 @@ padding: 1em;
     overflow: hidden;
   }
 
-  .expandedFriendDiv a {
-
-  }
+  
   
 }
 
@@ -697,6 +716,7 @@ padding: 1em;
   padding: 1em;
   border-radius: 5px;
   background-color: var(--color4);
+  margin-bottom: 1em;
 }
 
 .itemSortDiv h3 {
@@ -770,6 +790,10 @@ padding: 1em;
 .priorityDivSingleItem span:hover {
   cursor: pointer;
   background-color: var(--color4);
+}
+
+.priorityDivSingleItem p {
+  width: 100%;
 }
 
 .singleItemTitleDiv {
@@ -993,7 +1017,7 @@ padding: 1em;
 
 .modal-window {
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.40);
   top: 0;
   right: 0;
   bottom: 0;
