--- a/client/src/index.css
+++ b/client/src/index.css
@@ -465,6 +465,21 @@ padding: 1em;
   border-radius: 5px;
 }
 
+.friendRequestEl {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color1);
+  margin: 1.5em .5em;
+  padding: .5em 1em .2em 1em ;
+  transition: .1s linear;
+  border-radius: 5px;
+}
+
+.friendRequestEl button {
+  border: 1px black solid;
+}
+
 .friendEl:hover {
   cursor: pointer;
   background-color: var(--color3);
@@ -527,11 +542,22 @@ padding: 1em;
   align-items: center;
   margin: auto;
   width: 100%;
-  background-color: var(--color1);
   border-radius: 5px;
   margin-top: 4em;
   font-size: 12px;
   padding: .3em;
+}
+
+.toggleShownFriendList {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: .5em;
+}
+
+.toggleShownFriendList div {
+  width: 40%;
+  text-align: center;
 }
 
 .dropdown {
@@ -601,6 +627,10 @@ padding: 1em;
   .addFriendComponent, .friendsListDiv {
     margin: 1em 0 0 0;
   }
+
+  .toggleShownFriendList {
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 550px) {
@@ -610,7 +640,9 @@ padding: 1em;
   .friendEl {
     font-size: 10px;
   }
- 
+  .toggleShownFriendList {
+    font-size: 10px;
+  }
 }
 
 
