various ui changes, made things a little prettier

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,8 +61,7 @@ header {
   padding: 1em;
   margin: 1em;
   color: var(--color3);
-  box-shadow: 5px 5px 6px 0px rgba(0, 0, 0, 0.5),
-              -5px -5px 9px 0px;
+  box-shadow: 5px 5px 6px 0px rgba(0, 0, 0, 0.5);
   align-items: center;
 }
 
@@ -95,6 +94,10 @@ nav a:hover {
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.homeSection a {
+  border: 2px solid black;
 }
 
 .homeInsetBtn {
@@ -333,7 +336,6 @@ label {
   justify-content: space-evenly;
   border-radius: 5px;
   padding: .5em;
-  background-color: var(--color4);
 }
 
 .changeInfoDiv button {
@@ -570,7 +572,7 @@ padding: 1em;
 }
 
 .dropdown-content {
-  display: none;
+  display: none !important;
   position: absolute;
   background-color: #f9f9f9;
   color: var(--color3);
@@ -595,7 +597,7 @@ padding: 1em;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+  display: block !important;
 }
 
 @media (max-width: 1100px) {
@@ -753,6 +755,7 @@ padding: 1em;
   margin-top: 1em;
   overflow: hidden;
   border-radius: 5px;
+  border: 2px solid black;
 }
 
 .listDivEl a:hover {
@@ -775,6 +778,7 @@ padding: 1em;
   padding: 1em;
   margin: auto;
   border-radius: 5px;
+  border: 2px solid black;
   transition: 0.2s;
 }
 
@@ -782,6 +786,7 @@ padding: 1em;
   background-color: var(--color1);
   color: var(--color3);
   padding: 1em;
+  border: 2px solid black;
   border-radius: 5px;
   transition: 0.2s;
 }
@@ -841,6 +846,7 @@ padding: 1em;
   background-color: var(--color1);
   border-radius: 5px;
   margin: 1em;
+  border: 2px solid black;
   color: var(--color3);
 }
 
@@ -850,6 +856,11 @@ padding: 1em;
 
 .itemMapDiv div span {
   align-self: center;
+}
+
+.nothingToShow {
+  text-align: center;
+  width: 100%;
 }
 
 .itemDiv {
